# codorch

./: .gitignore  .pre-commit-config.yaml  CODE_QUALITY_REPORT.md  FINAL_PROJECT_STATUS.md  FINAL_SESSION_SUMMARY.md  FINAL_TEST_REPORT.md  MODULE4_SUMMARY.md  PHASE1_SUMMARY.md  PROJECT_AND_REFMEMTREE_FINAL_STATUS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REFMEMTREE_HONEST_ASSESSMENT.md  REFMEMTREE_IMPLEMENTATION_ROADMAP.md  REFMEMTREE_INTEGRATION_ACTIONABLE_PLAN.md  REFMEMTREE_REMAINING_FEATURES.md  SERVER_TEST_REPORT.md  SESSION_COMPLETE_SUMMARY.md  SUCCESS_REPORT.md  TESTING_GUIDE.md  TEST_STATUS_REPORT.md  ULTIMATE_SESSION_SUMMARY.md  _Export_code.cmd  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  🎉_CODORCH_100_PERCENT_COMPLETE.md  🎊_REFMEMTREE_95_PERCENT_FINAL.md  🎯_REFMEMTREE_85_PERCENT_ACTIVE.md  🎯_REFMEMTREE_90_PERCENT_COMPLETE.md  🎯_REFMEMTREE_INTEGRATION_COMPLETE.md  🏆_FINAL_SESSION_ACHIEVEMENTS.md  🚀_REAL_REFMEMTREE_INTEGRATED.md
.github/workflows/: ci.yml
backend/: .ruff.toml  README.md  RunMyPy.cmd  __init__.py  main.py  mypy.err  mypy.ini  pyproject.toml  pytest.ini
backend/ai_agents/: __init__.py  architecture_team.py  code_generation_team.py  goal_analyst.py  opportunity_team.py  requirements_team.py  research_team.py
backend/alembic/: env.py
backend/alembic/versions/: a8507bc7ec0c_add_architecture_tables_for_module_4.py  b9f12a3d4e5f_add_requirements_tables_for_module_5.py  c3d8e9f0a1b2_add_code_generation_tables_for_module_6.py  e48fc627d264_add_research_tables_for_module_3.py  e6006195c986_initial_migration_user_project_treenode_.py
backend/api/: deps.py
backend/api/v1/: analytics.py  architecture.py  auth.py  code_generation.py  goals.py  opportunities.py  projects.py  requirements.py  research.py  router.py  tree_nodes.py  users.py  websocket.py
backend/core/: __init__.py  ai_client.py  ai_governor.py  change_monitor.py  config.py  event_bus.py  event_emitter.py  graph_analytics_service.py  graph_hydration_service.py  graph_manager.py  graph_operations_service.py  graph_versioning_service.py  refmemtree_advanced.py  refmemtree_loader.py  refmemtree_wrapper.py  schemas.py  tree_monitors.py
backend/db/: base.py  models.py
backend/modules/: __init__.py
backend/modules/architecture/: __init__.py  refmemtree_integration.py  repository.py  schemas.py  service.py
backend/modules/code_generation/: __init__.py  repository.py  schemas.py  service.py  validation_pipeline.py
backend/modules/goals/: __init__.py  repository.py  schemas.py  service.py  smart_validator.py
backend/modules/opportunities/: __init__.py  repository.py  schemas.py  scoring.py  service.py
backend/modules/requirements/: __init__.py  repository.py  schemas.py  service.py
backend/modules/research/: __init__.py  repository.py  schemas.py  service.py
backend/modules/tree_nodes/: __init__.py  service.py
backend/services/: alert_service.py
backend/tests/: __init__.py  conftest.py  test_ai_client.py  test_ai_governor.py  test_auth.py  test_change_monitor.py  test_code_generation.py  test_event_emitter.py  test_goals.py  test_graph_manager.py  test_main.py  test_opportunities.py  test_projects.py  test_refmemtree.py  test_requirements.py
backend/tests/e2e/: README.md  __init__.py  test_refmemtree_e2e.py  test_refmemtree_scenarios.py
backend/tests/modules/: test_architecture_service.py  test_code_generation_service.py  test_goals_api.py  test_goals_repository.py  test_goals_service.py  test_opportunities_api.py  test_opportunities_repository.py  test_opportunities_service.py  test_requirements_service.py  test_research_api.py  test_research_repository.py  test_research_service.py
backend/tests/utils/: mock_ai.py
config/: .env.example
doc/: AI_AGENTS_SPECIFICATION.md  CODORCH_BRANDING.md  CODORCH_README.md  DATABASE_MIGRATIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_COMPLETE.md  FINAL_TEST_REPORT.md  FRONTEND_SPECIFICATION.md  GETTING_STARTED.md  INDEX.md  MODULE3_COMPLETE.md  MODULE3_PLAN.md  MODULE3_START.md  MODULE4_BACKEND_COMPLETE.md  MODULE4_COMPLETE.md  MODULE4_PLAN.md  MODULE5_COMPLETE.md  MODULE5_IMPLEMENTATION_PLAN.md  MODULE5_PLAN.md  MODULE6_COMPLETE.md  MODULE6_PLAN.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PLAN_2.md  PROJECT_IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  Plan_NextStep.md  QUICK_START.md  REFMEMTREE_ADVANCED_INTEGRATION.md  REFMEMTREE_CURRENT_USAGE.md  REFMEMTREE_DETAILED_USAGE.md  REFMEMTREE_IMPLEMENTATION_ROADMAP.md  REFMEMTREE_INTEGRATION_GUIDE.md  REFMEMTREE_SUMMARY.md  REFMEMTREE_USAGE_ANALYSIS.md  REFMEMTREE_USE_CASES.md  SERVER_TEST_REPORT.md  SESSION_SUMMARY.md  (+6 more)
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: .eslintrc.js  README.md  eslint.config.js  index.html  package-lock.json  package.json  quasar.config.js  quasar.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.git_disabled/: COMMIT_EDITMSG  index
frontend/.old/: package.json  quasar.config.js  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/boot/: axios.ts  socket.ts
frontend/src/components/: ModuleNode.vue
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/tests/: setup.ts
scripts/: grant_permissions.sql  start_backend.ps1  start_frontend.ps1
(+41 files in other folders)
